src/snapshots/avdl__reader__tests__response_annotation_on_message_is_rejected.snap
---
source: src/reader.rs
expression: err
---
Error {
    msg: "parse `<input>`",
    source: ParseDiagnostic {
        src: NamedSource {
            name: "<input>",
            source: "<redacted>",
            language: None,
        ,
        span: SourceSpan {
            offset: SourceOffset(
                73,
            ),
            length: 1,
        },
        message: "Can't set reserved property: response",
        label: None,
    },
}
