src/snapshots/avdl__reader__tests__type_annotation_on_field_type_is_rejected.snap
---
source: src/reader.rs
expression: render_error(&err)
---
  x parse `<input>`
  `-> Can't set reserved property: type
   ,-[<input>:4:28]
 3 |             protocol P {
 4 |                 record R { @type("custom") string name; }
   :                            ^^^^^^^|^^^^^^^
   :                                   `-- Can't set reserved property: type
 5 |             }
   `----
