src/snapshots/avdl__reader__tests__unterminated_string_in_annotation.snap
---
source: src/reader.rs
expression: rendered
---
  x line 1:11 unterminated string literal
   ,-[<input>:1:12]
 1 | @namespace("org.test)
   :            ^^^^^|^^^^^
   :                 `-- unterminated string literal
 2 | protocol Test {
 3 |   record Foo { string name; }
   `----
  help: string literals must be closed with a `"` on the same line
